feat: added nikki as author, thx for your comments

--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -83,4 +83,4 @@ Does that sound like a lot of manual work? Avoid extra work by using digital env
 :::
 
 ----
-Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0003-2060-842X](https://orcid.org/0000-0003-2060-842X)
+Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-2060-842X](https://orcid.org/0000-0003-2060-842X)
