--- a/i18n/de/docusaurus-plugin-content-docs/current/30_data/50_data_storage.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/30_data/50_data_storage.mdx
@@ -6,58 +6,58 @@ nfdi4chem-tags: [data_organisation, data_storage, repositories]
 slug: "/data_storage"
 ---
 
-If you plan to collect data and process it into information, you should consider different types of storage with regard to security, backup, access time and sharing with others. It is also of interest [how to estimate the computational resources for data processing and analysis](https://rdmkit.elixir-europe.org/storage.html#how-do-you-estimate-computational-resources-for-data-processing-and-analysis). There are different requirements for the entire [Data Life Cycle](/docs/data_life_cycle/). Regarding the workflows used in a project, care should also be taken when securing these workflows and tools (software version!) to ensure the reproducibility of results.
+Wenn Sie planen, Daten zu sammeln und zu Informationen zu verarbeiten, sollten Sie verschiedene Arten der Speicherung im Hinblick auf Sicherheit, Sicherung, Zugriffszeit und gemeinsame Nutzung mit anderen in Betracht ziehen. Es ist auch von Interesse, [wie man die Rechenressourcen für die Datenverarbeitung und -analyse abschätzen kann](https://rdmkit.elixir-europe.org/storage.html#how-do-you-estimate-computational-resources-for-data-processing-and-analysis). Es gibt unterschiedliche Anforderungen für den gesamten [Datenlebenszyklus](/docs/data_life_cycle/). Im Hinblick auf die in einem Projekt verwendeten Arbeitsabläufe sollte auch auf die Sicherung dieser Arbeitsabläufe und Werkzeuge (Softwareversion!) geachtet werden, um die Reproduzierbarkeit der Ergebnisse zu gewährleisten.
 
-## Workflow perspective
-Let's discuss different storage solutions along a possible workflow. Think of all possible data sources that provide data in your project, such as laboratory equipment (devices), manually collected data or external data from publications or project partners. Some devices may continuously automatically deliver data points while others regularly provide files for collection. Reduce the amount to the data points necessary for your project, consider possible pre-processing and estimate the data that will arise in terms of frequency and size. It is possible that data can already be processed while other data of the same type is still being recorded. At what point in the workflow is the data annotated by further metadata and does this possibly also work automatically? What descriptive documents are provided by human sources and when?
+## Workflow-Perspektive
+Lassen Sie uns verschiedene Speicherlösungen entlang eines möglichen Workflows diskutieren. Denken Sie an alle möglichen Datenquellen, die in Ihrem Projekt Daten liefern, z. B. Laborausrüstung (Geräte), manuell gesammelte Daten oder externe Daten aus Veröffentlichungen oder von Projektpartnern. Einige Geräte können kontinuierlich automatisch Datenpunkte liefern, während andere regelmäßig Dateien zur Sammlung bereitstellen. Reduzieren Sie die Menge auf die für Ihr Projekt erforderlichen Datenpunkte, berücksichtigen Sie eine mögliche Vorverarbeitung und schätzen Sie die anfallenden Daten in Bezug auf Häufigkeit und Umfang ab. Es ist möglich, dass Daten bereits verarbeitet werden können, während andere Daten desselben Typs noch erfasst werden. An welcher Stelle des Workflows werden die Daten mit weiteren Metadaten annotiert und funktioniert dies eventuell auch automatisch? Welche beschreibenden Dokumente werden von menschlichen Quellen bereitgestellt und wann?
 
-When planning [data management](/docs/dmp/), think about storage solutions and request short-term and long-term storage in advance.
+Denken Sie bei der Planung der [Datenverwaltung](/docs/dmp/) über Speicherlösungen nach und beantragen Sie im Voraus die kurz- und langfristige Speicherung.
 
-#### Necessary requirements when designing a storage system:
-- space requirements for collection or generation of raw data including temporary files ("fast storage")
-- space requirements for data that can be permanently accessed over the duration of the project
-- access requirements to the data (in case of collaborative projects), how do they expect to access the data and for what purpose
-- transfer speed requirements
-- sharing opportunities, guidelines for data sharing outside the institute, compliance and rights management
-- "read-only" copy of the original raw data in a separate location (not editable)
-- how long raw data, as well as data processing pipelines and analysis workflows need to be stored, especially after the end of the project
-- [metadata](/docs/metadata/): identifier and file description, associated with your data
-- requirements on version control to keep track of changes, conflict resolution, data mentoring and back-tracing capabilities
+#### Erforderliche Anforderungen bei der Konzeption eines Speichersystems:
+- Platzbedarf für die Sammlung oder Erzeugung von Rohdaten einschließlich temporärer Dateien ("Fast Storage")
+- Platzbedarf für Daten, auf die während der Projektlaufzeit permanent zugegriffen werden kann
+- Anforderungen an den Zugriff auf die Daten (im Falle von Kooperationsprojekten), wie und zu welchem Zweck soll auf die Daten zugegriffen werden
+- Anforderungen an die Übertragungsgeschwindigkeit
+- Möglichkeiten der gemeinsamen Nutzung, Richtlinien für die gemeinsame Nutzung von Daten außerhalb des Instituts, Compliance und Rechteverwaltung
+- schreibgeschützte Kopie der ursprünglichen Rohdaten an einem separaten Ort (nicht bearbeitbar)
+- wie lange die Rohdaten sowie die Datenverarbeitungspipelines und Analyse-Workflows aufbewahrt werden müssen, insbesondere nach Abschluss des Projekts
+- [Metadaten](/docs/metadata/): Kennung und Dateibeschreibung, die mit Ihren Daten verbunden sind
+- Anforderungen an die Versionskontrolle zur Verfolgung von Änderungen, Konfliktlösung, Datenbetreuung und Rückverfolgungsmöglichkeiten
 
-Involve the IT team of your home organisation, they can also provide advice on a tiered storage system:
-- "hot" storage: fast access speed, high access frequency, high value data -> high cost
-- "cold" storage: low access speed and frequency, usually off-premises -> low cost
-- preservation solutions (data archiving services)
-
-
-#### No backup? No mercy!
-The 3-2-1-0 rule:
-- there should be **3** copies of data
-- on **2** different media
-- with **1** copy being offline
-- and there should be **0** problems in the event of recovery. (So test your backups regularly...)
-
-Why? Sometimes it's not a technical problem, but a "layer-8"-issue: human error.
+Beziehen Sie das IT-Team Ihrer Heimatorganisation mit ein, es kann Sie auch zu einem abgestuften Speichersystem beraten:
+- "hot" Speicher: schnelle Zugriffsgeschwindigkeit, hohe Zugriffshäufigkeit, Daten mit hohem Wert -> hohe Kosten
+- "cold" Speicher: niedrige Zugriffsgeschwindigkeit und -häufigkeit, in der Regel außerhalb des Unternehmens -> niedrige Kosten
+- Aufbewahrungslösungen (Datenarchivierungsdienste)
 
 
-### Ok, I'm lost - this is far from my business.
+#### Keine Datensicherung? Keine Gnade!
+Die 3-2-1-0-Regel:
+- Es sollten **3** Kopien der Daten vorhanden sein
+- auf **2** verschiedenen Medien
+- wobei **1** Kopie offline ist
+- und es sollte **0** Probleme im Falle einer Wiederherstellung geben. (Testen Sie also regelmäßig Ihre Backups...)
 
-Many of the requirements are often solved by dedicated [repositories](/docs/repositories/). It is also worth taking a look at group drives or cloud services such as NextCloud (on-premises). Your local IT team and computing centre will help you with services that they usually support. But nevertheless: Make sure to generate good documentation (i.e., README file) and metadata together with the data. Check if your institute provides a (meta)data management system, such as iRODS, DataVerse, FAIRDOM-SEEK or OSF.
+Und warum? Manchmal ist es kein technisches Problem, sondern ein "Layer-8"-Problem: menschliches Versagen.
 
 
-## Nirvana - your data in FAIR-paradise
-:::info Preservation
-> Relevant (meta)data (to guarantee reproducibility) should be preserved for a certain amount of time, that is usually defined by funders or institution policy. However, where to preserve data that are not needed for active processing or analysis anymore is a common question in data management.
+### Ok, ich habe mich verirrt - das ist bei weitem nicht mein Geschäft.
 
-_see [RDMKit](https://rdmkit.elixir-europe.org/preserving)_
+Viele der Anforderungen werden oft durch spezielle [Repositorien](/docs/repositories/) gelöst. Es lohnt sich auch, einen Blick auf Gruppenlaufwerke oder Cloud-Dienste wie NextCloud (vor Ort) zu werfen. Ihr lokales IT-Team und Ihr Rechenzentrum werden Ihnen mit den Diensten helfen, die sie normalerweise unterstützen. Aber trotzdem: Achten Sie darauf, dass Sie zusammen mit den Daten eine gute Dokumentation (z. B. README-Datei) und Metadaten erstellen. Prüfen Sie, ob Ihr Institut ein (Meta-)Datenmanagementsystem anbietet, wie z.B. iRODS, DataVerse, FAIRDOM-SEEK oder OSF.
+
+
+## Nirvana - Ihre Daten im FAIR-Paradies
+:::info Konservierung
+> Relevante (Meta-)Daten sollten (um die Reproduzierbarkeit zu gewährleisten) für einen bestimmten Zeitraum aufbewahrt werden, der in der Regel von den Geldgebern oder den Richtlinien der Einrichtung festgelegt wird. Die Frage, wo Daten aufbewahrt werden sollen, die nicht mehr für die aktive Verarbeitung oder Analyse benötigt werden, ist eine häufige Frage im Datenmanagement.
+
+_siehe [FDMKit](https://rdmkit.elixir-europe.org/preserving)_
 :::
 
-Documentation or conversion of files into long-term backup formats. The data-holding facility must for its part guarantee security, quality and availability. Consider any license regulations or data protection of personal data when releasing it to the public.
+Dokumentation oder Konvertierung von Dateien in Langzeitsicherungsformate. Die datenhaltende Einrichtung muss ihrerseits Sicherheit, Qualität und Verfügbarkeit gewährleisten. Berücksichtigen Sie bei der Freigabe von Daten an die Öffentlichkeit allfällige Lizenzbestimmungen oder den Datenschutz von Personendaten.
 
-If you publish your data in public repositories, your data will also be preserved.
+Wenn Sie Ihre Daten in öffentlichen Repositorien veröffentlichen, werden Ihre Daten ebenfalls aufbewahrt.
 
 
-## Sources and further information
+## Quellen und weitere Informationen
 - https://rdmkit.elixir-europe.org/storage.html
 - https://www.rdm.kit.edu/index.php
 - https://www.druva.com/glossary/what-is-data-archiving-definition-and-related-faqs/
